Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25439

Recursive creation of QML component crashes

XMLWordPrintable

      If a QML component dynamically allocates a component from the same URL as itself, infinite recursion ensues.

      Run 'qmlscene OuterComponent.qml' to reproduce.

        1. InnerComponent.qml
          0.2 kB
          Matthew Vogt (closed Nokia identity)
        2. OuterComponent.qml
          0.3 kB
          Matthew Vogt (closed Nokia identity)
        For Gerrit Dashboard: QTBUG-25439
        # Subject Branch Project Status CR V

            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            mvogt Matthew Vogt (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes