Do not permit excessive recursion in component creation

Limit recursion during component creation to prevent infinite
recursion resulting in a crash.  Recursion results from invoking
createObject() in the Component.onCompleted handler.

Task-number: QTBUG-25439
Change-Id: Ica2ba099d82b5747c938501af04e67f7ace8402e
Reviewed-by: Michael Brasser <michael.brasser@nokia.com>